@@ -150,6 +150,8 @@ CONFIGURATION FILE CHANGES (see man appropriate man page for details)
  -- Add PriorityWeightAssoc to control association priority factor of a job.
  -- Add idle_on_node_suspend SlurmctldParameter to make nodes idle regardless
     of state when suspended.
+ -- Add alloc_booting_nodes SchedulerParameter to allow jobs to be placed on
+    booting nodes.
 
 COMMAND CHANGES (see man pages for details)
 ===========================================
